--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-calendar": "^3.0.0",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
